--- a/html/my.html
+++ b/html/my.html
@@ -7,12 +7,91 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="../css/aui.2.0.css">
     <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/common1.css">
     <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/my.css">
 </head>
 <body>
+<header>
+    <img class="user-photo" src="../images/user.jpg" alt="">
+    <div class="member-info">
+        <div>李炳辉</div>
+        <div>12345678911</div>
+    </div>
+</header>
+<nav>
+    <div class="member-withdraw">
+        <div>可用余额 <span>00000000000元</span></div>
+        <div>提现</div>
+    </div>
+    <div class="member-order">
+        <ul class="member-order-list">
+            <li class="li-bor">
+                <div class="three"></div>
+                <div>
+                    <span class="ab e9-color">待收益</span><br>
+                    <span>10000.00</span>
+                </div>
 
+            </li>
+            <li>
+                <div class="four"></div>
+                <div>
+                    <span class="cd e9-color">累计收益</span><br>
+                    <span>10000.00</span>
+                </div>
+
+            </li>
+
+        </ul>
+    </div>
+    <div class="member-info-entry">
+        <ul class="member-info-list">
+            <li>
+                <a href="myShop.html" class="display-box">
+                    我的店铺
+                </a>
+            </li>
+            <li>
+                <a href="adminaddress.html" class="display-box">
+                    收货地址
+                </a>
+            </li>
+            <li>
+                <a href="transuccess.html" class="display-box">
+                    销售管理
+                </a>
+            </li>
+            <li>
+                <a href="teamadmin.html" class="display-box">
+                    团队管理
+                </a>
+            </li>
+            <li>
+                <a href="teacher.html" class="display-box">
+                    我的培训老师
+                </a>
+            </li>
+            <li>
+                <a href="aboutus.html" class="display-box">
+                    关于我们
+                </a>
+            </li>
+            <li>
+                <a href="setup.html" class="display-box">
+                    设置
+                </a>
+            </li>
+            <li>
+                <a href="bindingtel.html" class="display-box">
+                    绑定手机号
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav>
 <footer class="aui-bar aui-bar-tab" id="footer">
-    <a href="index.html">
+    <a href="extension.html">
         <div class="aui-bar-tab-item" tapmode>
             <i class="aui-iconfont aui-icon-home"></i>
             <div class="aui-bar-tab-label">首页</div>
