--- a/html/goodsdetail.html
+++ b/html/goodsdetail.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/goodsdetail.css">
 </head>
 <body>
-<section style="background: #f0f0f0;">
+<section style="margin-bottom: 100px">
     <header class="aui-bar aui-bar-nav" id="aui-header">
         <div class="aui-col-xs-3 my-col-xs-3">
             <i class="aui-iconfont aui-icon-left"></i>
@@ -61,11 +61,79 @@
     <!--详情和评价具体内容-->
     <section class="goodsdetail-con">
         <div>详情</div>
-        <div class="cc">评价</div>
+        <div class="cc">
+            <!--全部和有图-->
+            <div class="goodsdetail-con-whole">
+                <div class="goodsdetail-whole-lr bor-r goodsdetail-active2">
+                    <span style="color: red">全部(236)</span>
+                </div>
+                <div class="goodsdetail-whole-lr bor-l"><span>有图(18)</span></div>
+            </div>
+            <!--全部和有图具体内容-->
+            <div class="goodsdetail-whole-con">
+                <!--全部-->
+                <div class="whole">
+                    <ul>
+                        <li>
+                            <!--用户名和日期-->
+                            <div class="user-date">
+                                <span>用户名sdfsdfsdfsd</span>
+                                <span>2017-6-26</span>
+                            </div>
+                            <p>
+                                发货很快，昂克赛拉大姐夫老司机埃弗拉手机垃圾费发货很快，昂克赛拉大姐夫老司机埃弗拉手机垃圾费,昂克赛拉大姐夫老司机埃弗拉手机垃圾费发货很快
+                            </p>
+                            <!--商品信息-->
+                            <span class="goods-detail">颜色分类 :净含量：200ml</span>
+
+                        </li>
+                        <li>
+                            <!--用户名和日期-->
+                            <div class="user-date">
+                                <span>用户名sdfsdfsdfsd</span>
+                                <span>2017-6-26</span>
+                            </div>
+                            <p>
+                                发货很快，昂克赛拉大姐夫老司机埃弗拉手机垃圾费发货很快，昂克赛拉大姐夫老司机埃弗拉手机垃圾费,昂克赛拉大姐夫老司机埃弗拉手机垃圾费发货很快
+                            </p>
+                            <!--商品信息-->
+                            <span class="goods-detail">颜色分类 :净含量：200ml</span>
+
+                        </li>
+                        <li>
+                            <!--用户名和日期-->
+                            <div class="user-date">
+                                <span>用户名sdfsdfsdfsd</span>
+                                <span>2017-6-26</span>
+                            </div>
+                            <p>
+                                发货很快，昂克赛拉大姐夫老司机埃弗拉手机垃圾费发货很快，昂克赛拉大姐夫老司机埃弗拉手机垃圾费,昂克赛拉大姐夫老司机埃弗拉手机垃圾费发货很快
+                            </p>
+                            <!--商品信息-->
+                            <span class="goods-detail">颜色分类 :净含量：200ml</span>
+
+                        </li>
+                        <li>
+                            <!--用户名和日期-->
+                            <div class="user-date">
+                                <span>用户名sdfsdfsdfsd</span>
+                                <span>2017-6-26</span>
+                            </div>
+                            <p>
+                                发货很快，昂克赛拉大姐夫老司机埃弗拉手机垃圾费发货很快，昂克赛拉大姐夫老司机埃弗拉手机垃圾费,昂克赛拉大姐夫老司机埃弗拉手机垃圾费发货很快
+                            </p>
+                            <!--商品信息-->
+                            <span class="goods-detail">颜色分类 :净含量：200ml</span>
+
+                        </li>
+                    </ul>
+                </div>
+                <!--有图-->
+                <div class="chooseimg" style="display: none;">有图的内容</div>
+            </div>
+
+        </div>
     </section>
-
-
-
     <footer class="goodsdetail-footer">
         <div class="goodsdetail-footer-gwc"><img src="../images/gwc.png" alt=""></div>
         <div class="goodsdetail-footer-join"><span>加入购物车</span></div>
@@ -93,13 +161,18 @@
         });
         <!--详情和评价切换-->
         $('.goodsdetail-sw-rl').click(function () {
-            $(this).addClass('goodsdetail-active1').find('.ab').addClass('goodsdetail-active')
-            $(this).siblings().removeClass('goodsdetail-active1').find('.ab').removeClass('goodsdetail-active')
+            $(this).addClass('goodsdetail-active1').find('.ab').addClass('goodsdetail-active');
+            $(this).siblings().removeClass('goodsdetail-active1').find('.ab').removeClass('goodsdetail-active');
             var index=$(this).index();
             $(".goodsdetail-con > div").eq(index).show().siblings().hide();
+        });
+//        <!--所有评价和图片评价切换-->
+        $('.goodsdetail-whole-lr').click(function () {
+            $(this).addClass('goodsdetail-active2').find('span').css('color','red');
+            $(this).siblings().removeClass('goodsdetail-active2').find('span').css('color','#1f1f1f');
+            var index1=$(this).index();
+            $('.goodsdetail-whole-con>div').eq(index1).show().siblings().hide()
         })
-
-
     });
 </script>
 
